--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,10 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+numpy = "*"
+ipykernel = "*"
 convokit = {extras = ["craft"], version = "*"}
+plac = "*"
 
 [requires]
 python_version = "3.8"
